--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Saqlain Mahmud",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.4",
-    "passport": "^0.4.0"
+    "nodemon": "^1.18.11",
+    "passport": "^0.4.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0"
