--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
 # TypeScript v1 declaration files
 typings/
 
@@ -89,3 +88,4 @@ typings/
 .dynamodb/
 
 # End of https://www.gitignore.io/api/node
+utils/keys_dev.js
