--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Saqlain Mahmud",
   "license": "ISC",
@@ -12,9 +13,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
